--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -72,13 +72,14 @@ file.reference.log4j-1.2.16.jar=WebContent/WEB-INF/lib/log4j-1.2.16.jar
 file.reference.mysql-connector-java-5.0.3-bin.jar=WebContent/WEB-INF/lib/mysql-connector-java-5.0.3-bin.jar
 file.reference.postgresql-9.1-903.jdbc4.jar=WebContent/WEB-INF/lib/postgresql-9.1-903.jdbc4.jar
 file.reference.postgresql-9.4-1204.jdbc4.jar=WebContent/WEB-INF/lib/postgresql-9.4-1204.jdbc4.jar
-file.reference.primefaces-4.0-sources.jar=WebContent/WEB-INF/lib/primefaces-4.0-sources.jar
-file.reference.primefaces-4.0.jar=WebContent/WEB-INF/lib/primefaces-4.0.jar
+file.reference.primefaces-6.0-sources.jar=WebContent/WEB-INF/lib/primefaces-6.0-sources.jar
+file.reference.primefaces-6.0.jar=WebContent/WEB-INF/lib/primefaces-6.0.jar
 file.reference.primefaces-mobile-0.9.4.jar=WebContent/WEB-INF/lib/primefaces-mobile-0.9.4.jar
 file.reference.ServidorCentral-src=src
 file.reference.slf4j-api-1.6.1.jar=WebContent/WEB-INF/lib/slf4j-api-1.6.1.jar
 file.reference.slf4j-simple-1.6.1.jar=WebContent/WEB-INF/lib/slf4j-simple-1.6.1.jar
 file.reference.standard.jar=WebContent/WEB-INF/lib/standard.jar
+file.reference.teleassistencia-WebContent=WebContent
 file.reference.ui-lightness-1.0.10.jar=WebContent/WEB-INF/lib/ui-lightness-1.0.10.jar
 file.reference.xercesImpl.jar=WebContent/WEB-INF/lib/xercesImpl.jar
 file.reference.xml-apis.jar=WebContent/WEB-INF/lib/xml-apis.jar
@@ -87,7 +88,7 @@ j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.2.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat7-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat7-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 java.source.based=true
@@ -104,12 +105,10 @@ javac.classpath=\
     ${file.reference.jaxen-1.1.6.jar}:\
     ${file.reference.slf4j-api-1.6.1.jar}:\
     ${file.reference.slf4j-simple-1.6.1.jar}:\
-    ${file.reference.primefaces-4.0.jar}:\
     ${file.reference.jackson-mapper-asl-1.9.2.jar}:\
     ${file.reference.hibernate-ehcache-4.2.6.Final.jar}:\
     ${file.reference.hibernate-commons-annotations-4.0.2.Final.jar}:\
     ${file.reference.httpmime-4.2.5.jar}:\
-    ${file.reference.primefaces-4.0-sources.jar}:\
     ${file.reference.commons-codec-1.6.jar}:\
     ${file.reference.jersey-servlet-1.12.jar}:\
     ${file.reference.httpclient-cache-4.2.5.jar}:\
@@ -146,7 +145,10 @@ javac.classpath=\
     ${file.reference.guava-16.0.1.jar}:\
     ${libs.jsf20.classpath}:\
     ${file.reference.primefaces-mobile-0.9.4.jar}:\
-    ${file.reference.ui-lightness-1.0.10.jar}
+    ${file.reference.ui-lightness-1.0.10.jar}:\
+    ${file.reference.teleassistencia-WebContent}:\
+    ${file.reference.primefaces-6.0-sources.jar}:\
+    ${file.reference.primefaces-6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
