--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ j2ee.server.home=C:/Users/Davi/tomcat
 j2ee.server.instance=tomcat70:home=C:\\Users\\Davi\\tomcat
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=Chrome.INTEGRATED
 user.properties.file=C:\\Users\\Davi\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
