--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,10 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -73,7 +77,7 @@ file.reference.mysql-connector-java-5.0.3-bin.jar=WebContent/WEB-INF/lib/mysql-c
 file.reference.postgresql-9.1-903.jdbc4.jar=WebContent/WEB-INF/lib/postgresql-9.1-903.jdbc4.jar
 file.reference.postgresql-9.4-1204.jdbc4.jar=WebContent/WEB-INF/lib/postgresql-9.4-1204.jdbc4.jar
 file.reference.primefaces-4.0-sources.jar=WebContent/WEB-INF/lib/primefaces-4.0-sources.jar
-file.reference.primefaces-6.0.jar=WebContent/WEB-INF/lib/primefaces-6.0.jar
+file.reference.primefaces-4.0.jar=WebContent/WEB-INF/lib/primefaces-4.0.jar
 file.reference.primefaces-mobile-0.9.4.jar=WebContent/WEB-INF/lib/primefaces-mobile-0.9.4.jar
 file.reference.ServidorCentral-src=src
 file.reference.slf4j-api-1.6.1.jar=WebContent/WEB-INF/lib/slf4j-api-1.6.1.jar
@@ -87,7 +91,7 @@ j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.2.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat7-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat7-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 java.source.based=true
@@ -105,8 +109,8 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.6.1.jar}:\
     ${file.reference.slf4j-simple-1.6.1.jar}:\
     ${file.reference.jackson-mapper-asl-1.9.2.jar}:\
-    ${file.reference.primefaces-6.0.jar}:\
     ${file.reference.hibernate-ehcache-4.2.6.Final.jar}:\
+    ${file.reference.primefaces-4.0.jar}:\
     ${file.reference.hibernate-commons-annotations-4.0.2.Final.jar}:\
     ${file.reference.httpmime-4.2.5.jar}:\
     ${file.reference.primefaces-4.0-sources.jar}:\
